[package]
name = "golem_libp2p"
version = "0.1.0"
authors = ["Adam Wierzbicki <awierzbicki@golem.network>"]
edition = "2018"

[dependencies]
futures = "0.1"
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "eeed66707b483448d641b9824a8f726121c5a334" }
tokio = "0.1"
tokio-io = "0.1"

[[bin]]
name = "welcome"
path = "src/bin/welcome_demo.rs"
